--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   intro_screen_onboarding_flutter: ^1.0.0
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.2
+  image_picker: ^0.8.4+5
 
 
 dev_dependencies:
