--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,15 @@ dependencies:
   shared_preferences: ^2.2.2
   image_picker: ^0.8.4+5
 
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  google_sign_in: ^6.3.0
+  cloud_firestore: ^5.6.6
+  
+  
+  
+  
+
 
 dev_dependencies:
   flutter_test:
