--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_auth: ^5.5.2
   google_sign_in: ^6.3.0
   cloud_firestore: ^5.6.6
+  firebase_storage: ^12.4.5
   
   
   
